Fix right button alignment when filters are disabled

--- a/src/components/CatalogView/CatalogView.css
+++ b/src/components/CatalogView/CatalogView.css
@@ -289,6 +289,7 @@
 
   /*   margin: 0 5px 0 10px; */
   margin: 0 5px 0 5px;
+  margin-left: auto;
 }
 
 .tiles-view-nav-right-button-on {
